--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,16 +8,19 @@ h1 {
 }
 
 
-
 .logo {
-	margin-top: 40px;
+	
+
 }
 
+
 .menu {
-	display: flex;
-	flex-direction: ;
-	justify-content: flex-end;
-	justify-content: space-between;
+	
+	
+}
+
+.logo, .menu {
+	vertical-align: middle;
 }
 
 
