--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ h1 {
 
 
 .logo {
-	margin-right: 500px;
+	margin-right: 480px;
 
 }
 
@@ -22,26 +22,26 @@ span {
 }
 
 .menu {
-	padding-right: 10px;
+	padding-left: 10px;
+	color: grey;
 }
-
 
 .logo, .menu {
 	vertical-align: middle;
 }
 
 .middle {
-	float: left;
-	
+	margin-top: 10px;
 }
 
 .picture {
 	float: right;
-	
+	align-content: middle;	
 }
 
 .middle .picture {
-
+	display: inline-block;
+	vertical-align: middle;
 }
 
 a {
@@ -49,12 +49,22 @@ a {
 }
 
 .email {
-	display: block;
 	margin-right: 10px;
+	width: 25%;
+	padding: 20px;
+	
 }
 
+
+::placeholder {
+	color: lightgrey;
+	padding-left: 20px;
+}
+
+
 .join {
-	display: inline;
+	vertical-align: middle;
+	text-align: center;
 }
 
 
@@ -69,11 +79,8 @@ a {
 /* Description about what Commune does */
 
 .about {
-	color: lightgrey;
-	display: inline-block;
+	color: grey;
 }
-
-
 
 button {
 	background-color: #28144e;
@@ -83,14 +90,11 @@ button {
 }
 
 
-
-
 .partners {
-	margin-top: 100px;
+	
 }
 
 /* This has not been assigned to an HTML element yet. This is to ensure spacing between the icons.*/
 .icons {
-	justify-content: space-around
-	;
+
 }
