--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,26 +1,27 @@
 * {
 	font-family: 'Nunito Sans', sans-serif;
-	border-style: solid white 20px;
+	filter: brightness(100%);
+
 }
 
 html {
-	border-style: solid white 20px;
 	display: flex;
-	justify-content: space-around
+	border: solid white 20px;
+	padding-bottom: 125px;
 }
 
 
 body {
-	background-color: #F1F6FA;
-	border-top-right-inner-radius: 10px;
-	border-style: solid white 20px;
+	background-color: #E9ECF8;
+
+
 }
 
 #nav {
 	display: flex;
 	justify-content: space-between;
-	
-	
+
+
 }
 
 .logo {
@@ -36,7 +37,7 @@ body {
 	align-items: center;
 	margin-top: auto;
 	vertical-align: middle;
-	
+
 }
 
 #links .menu-button {
@@ -46,7 +47,7 @@ body {
 
 li {
 	padding-left: 20px;
-	
+
 }
 
 a b {
@@ -58,7 +59,7 @@ a b {
 	margin-top: 10px;
 	display: inline-block;
 	/*the above centered everything in the middle*/
-	
+
 }
 
 .about {
@@ -75,11 +76,7 @@ a b {
 
 
 .picture {
-	float: right;
-	display: flex;
-	margin-top: 40px;
-	margin-bottom: auto;
-	
+	m;
 }
 
 
@@ -89,21 +86,21 @@ h1 {
 	margin-bottom: 0px;
 	font-weight: bolder;
 	font-size: 34pt;
-	
+
 }
 
 
 a {
 	color: #B4A1D2;
-	
+
 }
 
 .email {
 	margin-right: 10px;
-	width: 25%;
+	width: 43%;
 	padding: 20px;
 	font-weight: bold;
-	
+
 }
 
 
@@ -127,6 +124,7 @@ a {
 	color: #B4A1D2;
 	border-radius: 30px;
 }
+
 /* Description about what Commune does */
 
 .about {
@@ -138,15 +136,15 @@ button {
 	color: white;
 	padding: 20px;
 	border-radius: 10px;
-	
+
 }
 
 
 .partners {
-	padding: 70px;
+	padding: 80px;
 	padding-left: 0px;
 	padding-bottom: 0px;
-	
+
 }
 
 
