--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,39 +5,39 @@
 }
 
 html {
-	display: flex;
 	border: solid white 20px;
-	padding-bottom: 125px;
 }
 
 
 body {
 	background-color: #E9ECF8;
-
-
 }
 
-#nav {
+nav {
 	display: flex;
+	flex-direction: row;
 	justify-content: space-between;
 
-
 }
 
+
 .logo {
-	padding: 15px;
+	display: inline;
+	justify-content: flex-start;
 }
 
 #links {
 	color: gray;
 	list-style: none;
-	display: inline-flex;
+	display: flex;
 	justify-content: flex-end;
-	justify-content: space-evenly;
-	align-items: center;
-	margin-top: auto;
-	vertical-align: middle;
 
+
+}
+
+li {
+	display: inline-block;
+	vertical-align: middle;
 }
 
 #links .menu-button {
@@ -58,7 +58,6 @@ a b {
 .middle {
 	margin-top: 10px;
 	display: inline-block;
-	/*the above centered everything in the middle*/
 
 }
 
@@ -76,7 +75,11 @@ a b {
 
 
 .picture {
-	m;
+	display: inline-block;
+	padding-left: 100px;
+	padding-top: 10px;
+
+
 }
 
 
