--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,25 +10,10 @@ nav {
   justify-content: space-between;
 }
 
-.logo {
-  display: inline;
-  justify-content: flex-start;
-}
-
 #links {
   color: gray;
   list-style: none;
   display: flex;
-  justify-content: flex-end;
-}
-
-li {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-#links .menu-button {
-  vertical-align: middle;
   font-weight: bold;
 }
 
@@ -41,7 +26,7 @@ a b {
   font-weight: bolder;
 }
 
-.middle {
+.hero {
   margin-top: 10px;
   display: inline-block;
 }
@@ -50,7 +35,6 @@ a b {
   font-size: 14px;
 }
 
-/*That's what gives the input box the 3d look*/
 .email {
   border-color: white;
   border-width: 5px;
@@ -90,8 +74,7 @@ a {
   font-weight: bold;
 }
 
-/* The learn more link on top of the heading */
-.learn {
+.cta {
   padding: 10px;
   margin: 50px 0px 0px 0px;
   background-color: #28144e;
@@ -108,7 +91,7 @@ a {
 button {
   background-color: #28144e;
   color: white;
-  padding: 20px;
+  padding: 10px;
   border-radius: 10px;
 }
 
