--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,17 +8,23 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-top: auto;
 }
 
-#links {
+#links li {
   color: gray;
   list-style: none;
   display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: end;
   font-weight: bold;
+  list-style: none;
+  text-decoration-style: none;
 }
 
 li {
-  padding-left: 20px;
+  /* padding-left: 20px; */
 }
 
 a b {
@@ -27,22 +33,18 @@ a b {
 }
 
 .hero {
-  margin-top: 10px;
-  display: inline-block;
+  /* margin-top: 10px; */
+  margin: auto;
+  display: flex;
+  flex-direction: row;
 }
 
 .about {
   font-size: 14px;
 }
 
-.email {
-  border-color: white;
-  border-width: 5px;
-}
-
 .picture {
-  display: inline-block;
-  padding-left: 100px;
+  padding-left: 40px;
   padding-top: 10px;
 }
 
@@ -58,6 +60,8 @@ a {
 }
 
 .email {
+  border-color: white;
+  border-width: 5px;
   margin-right: 10px;
   width: 43%;
   padding: 20px;
@@ -90,6 +94,12 @@ input {
 
 .about {
   color: grey;
+}
+
+.nav-button {
+  background-color: #28144e;
+  color: white;
+  border-radius: 10px;
 }
 
 button {
